# home-ops.archive

./: .editorconfig  .env.example  .envrc.example  .gitignore  .gitmodules  Makefile  README.md  pyproject.toml  renovate.json
kubernetes/apps/nfs-subdir-external-provisioner/: values.yaml
kubernetes/apps/traefik/: deployment.yaml
kubernetes/bootstrap/: kustomization.yaml
kubernetes/flux/: workloads.yaml
kubernetes/flux-system/: gotk-sync.yaml
kubernetes/flux/config/: config.yaml  gotk-sync.yaml  kustomization.yaml
kubernetes/flux/flux-system/: gotk-sync.yaml
kubernetes/flux/system/: kustomization.yaml  system.yaml
kubernetes/flux/vars/: global-vars.yaml  kustomization.yaml
kubernetes/flux/workloads/: kustomization.yaml
kubernetes/metallb/: default-l2-advertisement.yaml
kubernetes/nfs-subdir-external-provisioner/: values.yaml
kubernetes/workloads/: kustomization.yaml
kubernetes/workloads/authentik/: kustomization.yaml
kubernetes/workloads/cert-manager/: ks.yaml  kustomization.yaml  resource-quota.yaml
kubernetes/workloads/collabora/: kustomization.yaml  namespace.yaml  resource-quota.yaml
kubernetes/workloads/default/: kustomization.yaml  (+1 more)
manifests/talos/: patches.yaml  pod-security.yaml
scripts/: boostrap-talos.py  delete-failed-cilium-pods.sh  generate-patches.sh  opnsense.py  retrieve-leases.py  retrieve_leases.py  talos.py
talos/manifests/: qemu-guest-agent-sa.yaml
talos/patches/: all.yaml  controlplane-patches.yaml  controlplane.yaml  worker.yaml
terraform/: main.tf  output.tf  providers.tf  variables.tf  versions.tf
(+174 files in other folders)
